[package]
name = "ap-relay"
version = "0.1.0"
authors = ["fujita-daiki"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10.29"
base64 = "0.12.1"
chrono = "0.4.11"
# log = "0.4.8"
hyper-tls = "0.4.1"
